--- a/Tecnologias wed/index.html
+++ b/Tecnologias wed/index.html
@@ -1,43 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera wed</title>
+    <title>Las mejores reseñas</title>
 </head>
 
 <body>
-    
     <header>
-
-        <img src="img/utpl1.png" alt="Logo de la Utpl">
-
-        <nav>
-
-            <ol>
-
-                <li><a href="index.html">HOME</a></li>
-                <li>comentario</li>
-                <li></li>
-                <li></li>
-
-
-
-            </ol>
-
-
-        </nav>
-
-
-
-
+        <h1>Reseñas IMDB</h1>
     </header>
-
-
-
-
-
-
 
 
 </body>
