--- a/Tecnologias wed/index.html
+++ b/Tecnologias wed/index.html
@@ -11,6 +11,31 @@
         <h1>Reseñas IMDB</h1>
     </header>
 
+    <nav>
+     
+        <a href="index.html">IMDB</a>
+        <a href="libros.html">libros</a>
+        <a href="peliculas.html">Peliculas</a>
+        <a href="videojuegos.html">Juegos</a>
+        <a href="contacto.html">Contactos</a>
+
+    </nav>
+
+     <div>
+     <img src="imgIMDB/IMDB.avif" alt="Logo de la marca IMDB" style="width: 50%; height: auto;">
+     </div>
+
+    <div>
+        <p>Bienvenido a nuestro sitio de Reseñas Multimedia, inspirado en plataformas como IMDb.</p> 
+        <p>Aquí compartimos opiniones honestas y recomendaciones sobre libros, películas y videojuegos que han dejado huella. Nuestro objetivo es ofrecer una guía práctica y entretenida para ayudarte a descubrir nuevas historias, clásicos imperdibles y joyas ocultas. </p>
+        <p>Explora nuestras secciones y encuentra tu próxima gran experiencia narrativa.</p>
+    </div>
+
+     <footer>
+    <p>&copy; 2025 Reseñas IMDB</p>
+  </footer>
+
+
 
 </body>
 </html>
