--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <figure class="baner"> 
         <img src="imgIndex/blog-videojuegos-cabecera.png" alt="imagenbaner">
     </figure>
-    <div class="imdb-feature-section"> </div>
+    <div class="separacionRaya"> </div>
         <section class="separacion">
           <h3 class="h3">Lo más destacado de hoy</h3>
           <h4 class="h4">Libros</h4>
@@ -87,7 +87,7 @@
           </div>
         </section>
 
-        <div class="imdb-feature-section"> </div>
+        <div class="separacionRaya"> </div>
 
         <section class="separacion">
           <h4 class="h4">Películas</h4>
@@ -119,7 +119,7 @@
           </div>
         </section>
 
-        <div class="imdb-feature-section"> </div>
+        <div class="separacionRaya"> </div>
 
         <section class="separacion">
           <h4 class="h4">Videojuegos</h4>
